--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,3 +58,79 @@ header ul li a
     text-decoration: none;
 
 }
+
+.content
+{
+ position: relative;
+ width: 100%;
+ display:flex;
+ justify-content: space-between;
+ align-items:center;
+
+}
+.content .textBox
+{
+ position: relative;
+ max-width: 600px;
+}
+
+.content .textBox h2 
+{
+ color:rgb(51,51,51);
+ font-size:4em;
+ line-height: 1.4em;
+ font-weight: 500px;
+}
+
+.content .textBox h2 span 
+{
+ color:rgb(1,113,67);   
+}
+.content .textBox p 
+{
+ color: rgb(51,51,51)
+}
+
+.content .textBox a 
+{
+
+ display: inline-block;
+ margin-top: 20px;
+ padding:8px 20px;
+ background: rgb(1,113,67);
+ color:white;
+ border-radius: 40px;
+ font-weight: 500px;
+ letter-spacing: 1px;
+ text-decoration: none;
+
+}
+
+.content .imgBox
+{
+ width: 600px;
+ display: flex;
+ justify-content: flex-end;
+ padding-right:50px;
+ margin-top: 50px;
+}
+.content .imgBox img
+
+{
+ max-width: 340px;
+}
+
+.thumb 
+{
+ position: absolute;
+ left: 50%;
+ bottom:20px;
+ transform: translateX(-50%);
+ display: flex;
+
+}
+
+.thumb li
+{
+ list-style:none;
+}
