--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@
  font-family: Arial, Helvetica, sans-serif;
 }
 
+
 section 
 {
  position: relative;
@@ -17,6 +18,17 @@ section
  justify-content: space-between;
  align-items: center;
  background:white;
+}
+
+.circle
+{
+ position: absolute;
+ top:0;
+ left:0;
+ width:100%;
+ height:100%;
+ background:rgb(1,113,67);  
+ clip-path: circle(600px at right 800px);
 }
 
 header 
@@ -133,4 +145,43 @@ header ul li a
 .thumb li
 {
  list-style:none;
+ display: inline-block;
+ margin:0 20px;
+ cursor: pointer;
+ transition: 0.5s;
+}
+.thumb li:hover
+{
+ transform: translateY(-15px);
+}
+
+.thumb li img
+{
+ max-width: 60px;
+}
+
+.sci 
+{
+ position: absolute;
+ top:50%;
+ right: 30px;
+ transform: translateY(-50%);
+ display:flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+}
+
+.sci li
+{
+ list-style:none;
+}
+
+.sci li a 
+{
+ display: inline-block;
+ margin:5px 0;
+ transform: scale(0.6);
+ filter:invert(1);
+
 }
